--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+h1 {
+  color: red; }
+
+h1 {
+  color: red; }
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-}
+  font-family: sans-serif; }
